--- a/WeatherReport/.env
+++ b/WeatherReport/.env
@@ -1,1 +1,2 @@
-APIKEY = 6607b5ff364b393169198f44f10e6715
+APIKEY_OPEN_WEATHER = 6607b5ff364b393169198f44f10e6715
+APIKEY_UNSPLASH = Ez8EluKzO3ikTDUlfh8qQIBEXyWg63taNul6fryrxD0
