--- a/WeatherReport/.env
+++ b/WeatherReport/.env
@@ -1,2 +1,2 @@
 APIKEY_OPEN_WEATHER = 6607b5ff364b393169198f44f10e6715
-APIKEY_UNSPLASH = Ez8EluKzO3ikTDUlfh8qQIBEXyWg63taNul6fryrxD0
+APIKEY_NEWS = d3ef0e3a27d294d1969e852f797749ed
