--- a/WeatherReport/pom.xml
+++ b/WeatherReport/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>jakarta.mail</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>19</version>
+        </dependency>
 
     </dependencies>
 
