--- a/WeatherReport/.env
+++ b/WeatherReport/.env
@@ -1,2 +1,4 @@
-APIKEY_OPEN_WEATHER = 6607b5ff364b393169198f44f10e6715
-APIKEY_NEWS = d3ef0e3a27d294d1969e852f797749ed
+APIKEY_OPEN_WEATHER = [YOUR-API-KEY-HERE]
+APIKEY_UNSPLASH = [YOUR-API-KEY-HERE]
+EMAIL=
+PASSWORD=
