--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-APIKEY_OPEN_WEATHER = [YOUR-API-KEY-HERE]
-APIKEY_UNSPLASH = [YOUR-API-KEY-HERE]
-EMAIL=
-PASSWORD=
+EMAIL = your_email@gmail.com
+PASSWORD = your_email_application_password
